# taktflow-opensovd

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  ENGINEERING-SPECIFICATION.html  LICENSE  MASTER-PLAN-PART-2-PRODUCTION-GRADE.md  MASTER-PLAN.md  README.md  SYSTEM-SPECIFICATION.html  TASKS.md  WORKING-LINES.md
classic-diagnostic-adapter/: .dockerignore  .gitignore  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  DOWNSTREAM-PATCHES.md  NOTICE  README.md  REUSE.toml  clippy.toml  deny.toml  gen_protos.sh  opensovd-cda.toml  rust-toolchain.toml  rustfmt.toml
classic-diagnostic-adapter/.github/workflows/: build.yml  generate_documentation.yml  pr-checks.yml  pre-commit.yaml
classic-diagnostic-adapter/cda-build/: Cargo.toml
classic-diagnostic-adapter/cda-build/src/: lib.rs
classic-diagnostic-adapter/cda-comm-doip/: Cargo.toml  build.rs
classic-diagnostic-adapter/cda-comm-doip/src/: config.rs  connections.rs  ecu_connection.rs  lib.rs  socket.rs  vir_vam.rs
classic-diagnostic-adapter/cda-comm-uds/: Cargo.toml
classic-diagnostic-adapter/cda-comm-uds/src/: lib.rs
classic-diagnostic-adapter/cda-core/: Cargo.toml
classic-diagnostic-adapter/cda-core/src/: lib.rs
classic-diagnostic-adapter/cda-database/: Cargo.toml  build.rs
classic-diagnostic-adapter/cda-database/proto/: file_format.proto
classic-diagnostic-adapter/cda-database/src/: lib.rs
classic-diagnostic-adapter/cda-health/: Cargo.toml
classic-diagnostic-adapter/cda-health/src/: config.rs  lib.rs
classic-diagnostic-adapter/cda-interfaces/: Cargo.toml
classic-diagnostic-adapter/cda-interfaces/src/: com_param_handling.rs  config.rs  diagservices.rs  ecugateway.rs  ecumanager.rs  ecuuds.rs  file_manager.rs  lib.rs  schema.rs  strings.rs  util.rs
classic-diagnostic-adapter/cda-main/: Cargo.toml  build.rs
classic-diagnostic-adapter/cda-main/src/: lib.rs  main.rs
classic-diagnostic-adapter/cda-plugin-security/: Cargo.toml
classic-diagnostic-adapter/cda-plugin-security/src/: default_security_plugin.rs  lib.rs
classic-diagnostic-adapter/cda-sovd/: Cargo.toml
classic-diagnostic-adapter/cda-sovd-interfaces/: Cargo.toml
classic-diagnostic-adapter/cda-sovd-interfaces/src/: apps.rs  error.rs  lib.rs  locking.rs
classic-diagnostic-adapter/cda-sovd/src/: dynamic_router.rs  lib.rs  openapi.rs
classic-diagnostic-adapter/cda-tracing/: Cargo.toml
classic-diagnostic-adapter/cda-tracing/src/: lib.rs  otel.rs  subscriber.rs
classic-diagnostic-adapter/comm-mbedtls/mbedtls-rs/: Cargo.toml
classic-diagnostic-adapter/comm-mbedtls/mbedtls-sys/: Cargo.toml  build.rs  wrapper.h
classic-diagnostic-adapter/docs/: Dockerfile  cda_trace.toml  conf.py  index.rst  rebuild_docs.sh  requirements.txt
classic-diagnostic-adapter/docs/01_about/: 01_introduction.rst  02_terminology.rst  03_conventions.rst  04_traceability.rst  index.rst
classic-diagnostic-adapter/docs/02_requirements/: 01_general.rst  02_sovd.rst  03_diagnostic_tester.rst  04_communication.rst  05_plugins.rst  index.rst
classic-diagnostic-adapter/docs/03_architecture/: 00_overview.rst  01_general.rst  02_sovd-api.rst  03_communication.rst  04_diagnostic_tester.rst  05_plugins.rst  index.rst
classic-diagnostic-adapter/docs/04_adr/: 01_mimalloc.rst  02_mbedtls_tls_backend.rst  03_mmap_strategy.rst  index.rst
classic-diagnostic-adapter/docs/49_generated/: 01_cda.rst  index.rst
classic-diagnostic-adapter/docs/50_openapi_generator/: index.rst
classic-diagnostic-adapter/integration-tests/: Cargo.toml  build.rs
classic-diagnostic-adapter/testcontainer/: .env.example  README.md  docker-compose.yml
diag-converter/: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  UPSTREAM.md  flatbuffers_src.BUILD
diag-converter/.github/: CODEOWNERS
diag-converter/diag-cli/: BUILD.bazel  Cargo.toml
diag-converter/diag-ir/: BUILD.bazel  Cargo.toml
diag-converter/diag-odx/: BUILD.bazel  Cargo.toml
diag-converter/diag-yaml/: BUILD.bazel  Cargo.toml
diag-converter/docs/: fbs-schema-limitations.md
diag-converter/mdd-format/: BUILD.bazel  Cargo.toml  build.rs
diag-converter/test-fixtures/: BUILD.bazel
dlt-tracing-lib/: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CODESTYLE.md  CONTRIBUTORS  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
dlt-tracing-lib/.devcontainer/: Dockerfile  devcontainer.json
dlt-tracing-lib/dlt-rs/: Cargo.toml  README.md  build.rs
dlt-tracing-lib/dlt-sys/: Cargo.toml  README.md  build.rs
dlt-tracing-lib/integration-tests/: Cargo.toml
dlt-tracing-lib/tracing-dlt/: Cargo.toml  README.md
opensovd-core/: .dockerignore  .gitignore  ARCHITECTURE.md  CODESTYLE.md  CONTRIBUTORS  Cargo.toml  README.md  clippy.toml  deny.toml  opensovd.toml  rust-toolchain.toml  rustfmt.toml
opensovd-core/backend-adapter/: Cargo.toml
opensovd-core/docs/: cda-bugs-found-phase2.md  local-sil-dlt.md  local-sil-otel.md  openapi-audit-2026-04-14.md  phase-4-line-a-bench-pass.md  phase-5-line-a-performance.md  phase6-dlt-rollout-checklist.md  phase6-otlp-production-path.md  sync-diff-2026-04-14.md  tdd-punchlist-2026-04-14.md
opensovd-core/integration-tests/: Cargo.toml
opensovd-core/sovd-client/: Cargo.toml
opensovd-core/sovd-client-rust/: Cargo.toml
opensovd-core/sovd-covesa/: Cargo.toml
opensovd-core/sovd-db/: Cargo.toml
opensovd-core/sovd-db/src/: lib.rs
opensovd-core/sovd-dfm/: Cargo.toml
opensovd-core/sovd-extended-vehicle/: Cargo.toml
opensovd-core/sovd-gateway/: Cargo.toml
opensovd-core/sovd-interfaces/: Cargo.toml
opensovd-core/sovd-main/: Cargo.toml
opensovd-core/sovd-ml/: Cargo.toml
opensovd-core/sovd-server/: Cargo.toml  README.md  coverage.md  openapi.yaml
opensovd-core/sovd-tracing/: Cargo.toml
opensovd-core/xtask/: Cargo.toml  coverage.toml
uds2sovd-proxy/: .gitignore  CODESTYLE.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml  uds2sovd-proxy.example.toml
uds2sovd-proxy/.github/: CODEOWNERS
uds2sovd-proxy/src/: config.rs  lib.rs  main.rs  mdd.rs  proxy.rs  sovd.rs  tracing_setup.rs  uds.rs
(+1077 files in other folders)
