# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter"

[workspace]
resolver = "3"
members = [
  "cda-database",
  "cda-interfaces",
  "cda-core",
  "cda-comm-doip",
  "cda-comm-uds",
  "cda-sovd",
  "cda-sovd-interfaces",
  "cda-main",
  "cda-tracing",
  "cda-plugin-security",
  "cda-health",
  "integration-tests",
  "cda-build",
  "comm-mbedtls/mbedtls-sys",
  "comm-mbedtls/mbedtls-rs",
]

[workspace.dependencies]
opensovd_cda_lib = { path = "cda-main", package = "opensovd-cda" }
cda-interfaces = { path = "cda-interfaces" }
cda-core = { path = "cda-core" }
cda-comm-doip = { path = "cda-comm-doip" }
cda-comm-uds = { path = "cda-comm-uds" }
cda-database = { path = "cda-database" }
cda-plugin-security = { path = "cda-plugin-security" }
cda-sovd = { path = "cda-sovd" }
cda-tracing = { path = "cda-tracing" }
cda-health = { path = "cda-health" }
sovd-interfaces = { path = "cda-sovd-interfaces" }
cda-build = { path = "cda-build" }
mbedtls-sys = { path = "comm-mbedtls/mbedtls-sys" }
mbedtls-rs = { path = "comm-mbedtls/mbedtls-rs" }

# ---- common crates ----
async-trait = "0.1.89"
thiserror = "2.0.17"
num-traits = "0.2"
parking_lot = "0.12.5"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.48.0", default-features = false }
tokio-util = { version = "0.7.3", default-features = false }
futures = "0.3"
regex = "1.12.2"
uuid = "1.18.1"
bytes = "1"
prost = "0.14"
flatbuffers = "25.9.23"
xz2 = "0.1.7"
hex = "0.4.3"
strum = "0.27.2"
strum_macros = "0.27.2"
indexmap = "2.12.1"
http = "1.3.1"
mime = "0.3.17"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.42"
prost-build = "0.14.1"
reqwest = "0.12.24"
url = "2.5.7"
clap = "4.5"
figment = "0.10.19"
schemars = "1.1.0"
aide = "0.16.0-alpha.1"
doip-codec = "2.0.8"
doip-definitions = "3.0.13"
ouroboros = "0.18.5"
toml = "0.9.8"
cargo_toml = "0.22.3"
libc = "0.2.177"
foldhash = "0.2.0"
memmap2 = "0.9"
mockall = "0.14.0"
sha2 = "0.10"

# ---- tracing & logging crates ----
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", default-features = false }
tracing-dlt = { version = "0.1.0" }
strip-ansi-escapes = "0.2.1"
nu-ansi-term = "0.50"
console-subscriber = "0.5.0"
percent-encoding = "2.3.2"

# ---- opentelemetry crates ----
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", default-features = false }
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"

# ---- networking crates ----
openssl = "0.10"
socket2 = "0.6.1"
tokio-openssl = { version = "0.6.5" }
tower = { version = "0.5", default-features = false }
tower-http = "0.6"

# ---- web/api crates ----
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.12.2" }
serde_qs = "1.0.0-rc.3"
urlencoding = "2.1.3"

# ---- utility crates ----
const_format = "0.2.35" # compile time string formatting
rustversion = "1.0.22"  # macros for conditional compilation

[workspace.lints.clippy]
# enable pedantic
pedantic = { level = "warn", priority = -1 }
## exclude some too pedantic lints for now
similar_names = "allow"

# additional lints
clone_on_ref_ptr = "warn"
indexing_slicing = "deny"
unwrap_used = "deny"
arithmetic_side_effects = "deny"
separated_literal_suffix = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

[profile.release.package."*"]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
# Necessary because upstream is still using an older version of serde_qs (0.14 instead of 1.0.0-rc.3)
aide = { git = "https://github.com/alexmohr/aide.git", rev = "56355cb" }
doip-codec = { git = "https://github.com/theswiftfox/doip-codec.git", rev = "0dba319" }
doip-definitions = { git = "https://github.com/theswiftfox/doip-definitions.git", rev = "bdeab8c" }
flatbuffers = { git = "https://github.com/alexmohr/flatbuffers.git", rev = "0ba3307d" }
