[workspace]
resolver = "3"
members = [
    "mdd-format",
    "diag-ir",
    "diag-yaml",
    "diag-odx",
    "diag-cli",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic false positives in this codebase
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Underscore-prefixed fields used intentionally in FlatBuffers-derived structs
used_underscore_binding = "allow"
pub_underscore_fields = "allow"
# Doc lints - too noisy for technical names (FlatBuffers, CycloneDDS, etc.)
doc_markdown = "allow"
# Lifetime elision style is a preference, not a bug
elidable_lifetime_names = "allow"
# Style preferences - not bugs
uninlined_format_args = "allow"
collapsible_if = "allow"
match_same_arms = "allow"
manual_let_else = "allow"
wildcard_imports = "allow"
similar_names = "allow"
if_not_else = "allow"
unnested_or_patterns = "allow"
items_after_statements = "allow"
unreadable_literal = "allow"
trivially_copy_pass_by_ref = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
needless_raw_string_hashes = "allow"
return_self_not_must_use = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
# Option reference style is a preference
ref_option = "allow"
# Large enum variants - boxing would change API surface
large_enum_variant = "allow"

[workspace.dependencies]
# Internal
mdd-format = { path = "mdd-format" }
diag-ir = { path = "diag-ir" }
diag-yaml = { path = "diag-yaml" }
diag-odx = { path = "diag-odx" }

# Binary formats - MUST match CDA versions for compatibility
flatbuffers = "25.9.23"
prost = "0.13"
prost-types = "0.13"

# Compression - xz2 for CDA-compatible LZMA (NOT lzma-rs!)
xz2 = { version = "0.1", features = ["static"] }
flate2 = "1"
zstd = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }

# Validation
jsonschema = "0.42"

# Archive
zip = { version = "2", default-features = false, features = ["deflate"] }

# Cryptography
sha2 = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }
rayon = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Testing
pretty_assertions = "1"
tempfile = "3"

[patch.crates-io]
# Use same flatbuffers fork as CDA for binary compatibility
flatbuffers = { git = "https://github.com/alexmohr/flatbuffers.git", rev = "0ba3307d" }
