# Copyright (c) 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/eclipse-opensovd/dlt-tracing-lib"

[workspace]
resolver = "3"
members = ["dlt-sys", "dlt-rs", "tracing-dlt", "integration-tests"]

[workspace.dependencies]
tracing-dlt = { path = "tracing-dlt", version = "0.1.2" }
dlt-sys = { path = "dlt-sys", version = "0.1.2" }
dlt-rs = { path = "dlt-rs", version = "0.1.2" }
integration-tests = { path = "integration-tests" }

# ---- common crates ----
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = [
  "sync",
  "rt",
] }
bindgen = "0.72.1"
cc = "1.2.47"
indexmap = "2.12.1"
serial_test = "3.2.0"

# ---- tracing & logging crates----
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = { version = "0.3.20", default-features = false }

[workspace.lints.clippy]
# enable pedantic
pedantic = { level = "warn", priority = -1 }
## exclude some too pedantic lints for now
similar_names = "allow"

# additional lints
clone_on_ref_ptr = "warn"
indexing_slicing = "deny"
unwrap_used = "deny"
arithmetic_side_effects = "deny"

[profile.release.package."*"]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
