# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "cda-comm-uds"
version = "0.1.0"
edition.workspace = true
publish = false
description = "UDS communication layer used in CDA"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }

async-trait = { workspace = true }

socket2 = { workspace = true, features = ["all"] }
#tokio
tokio = { workspace = true, features = ["sync", "fs", "time", "rt", "io-util"] }
#futures
futures = { workspace = true }

serde_json = { workspace = true }

# logging & tracing
tracing = { workspace = true }
strum = { workspace = true }

[features]
default = []
dlt-tracing = ["cda-interfaces/dlt-tracing"]
