# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "cda-core"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Diagnostic Core of CDA"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }
cda-database = { workspace = true }
cda-plugin-security = { workspace = true }

# external
num-traits = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

schemars = { workspace = true }

# logging & tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
flatbuffers = { workspace = true }
cda-database = { workspace = true, features = ["database-builder"] }

[features]
default = []
dlt-tracing = ["cda-interfaces/dlt-tracing"]
