# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "cda-health"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Provides a health check interface"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-sovd = { workspace = true }
cda-interfaces = { workspace = true }

# external
async-trait = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
# tokio
tokio = { workspace = true, features = ["sync"] }

# web server
axum = { workspace = true, features = ["json"] }

aide = { workspace = true, features = ["axum"] }
chrono = { workspace = true }

[features]
default = []
