# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "cda-interfaces"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Interfaces and Types used in CDA"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
bytes = { workspace = true }
foldhash = { workspace = true }

parking_lot = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
#tokio
tokio = { workspace = true, features = ["sync", "time"] }
# runtime size info
hex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
# logging
tracing = { workspace = true }

mockall = { version = "0.14.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = []
tokio-tracing = ["tokio/tracing"]
dlt-tracing = []
test-utils = ["mockall"]
