# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "opensovd-cda"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Eclipse OpenSOVD CDA - A modern open source Classic Diagnostic Adapter written in Rust"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "opensovd-cda"
path = "src/main.rs"

[lib]
name = "opensovd_cda_lib"
path = "src/lib.rs"

[dependencies]
cda-core = { workspace = true }
cda-comm-doip = { workspace = true }
cda-comm-uds = { workspace = true }
cda-database = { workspace = true }
cda-interfaces = { workspace = true }
cda-sovd = { workspace = true }
cda-tracing = { workspace = true }
cda-plugin-security = { workspace = true }
cda-health = { workspace = true }
# args
clap = { workspace = true, features = ["derive"] }
# config
figment = { workspace = true, features = ["env", "toml"] }
futures = { workspace = true }
# allocator
mimalloc = { git = "https://github.com/theswiftfox/mimalloc.git", rev = "afbaaa5" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "time",
  "signal",
] }
# logging & tracing
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "chrono",
  "env-filter",
  "fmt",
  "json",
  "parking_lot",
  "std",
] }

[dev-dependencies]
chrono = { workspace = true }
http = { workspace = true }
mime = { workspace = true }
reqwest = { workspace = true }

[build-dependencies]
chrono = { workspace = true }

[features]
default = ["health", "openssl"]
tokio-tracing = ["cda-interfaces/tokio-tracing", "cda-tracing/tokio-tracing"]
openssl = ["cda-comm-doip/openssl"]
openssl-vendored = ["openssl", "cda-comm-doip/openssl-vendored"]
mbedtls = ["cda-comm-doip/mbedtls"]
dlt-tracing = ["cda-tracing/dlt-tracing"]
integration-tests = []

health = []
