# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "cda-sovd"
version = "0.1.0"
edition.workspace = true
publish = false
description = "SOVD webserver used in CDA"
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }
cda-plugin-security = { workspace = true }
cda-tracing = { workspace = true }
sovd-interfaces = { workspace = true }

# external
tokio = { workspace = true, features = ["net"] }

# openapi generation
aide = { workspace = true, features = [
  "axum",
  "swagger",
  "http",
  "axum-extra",
  "axum-json",
  "axum-matched-path",
  "axum-original-uri",
  "axum-query",
  "axum-extra-headers",
  "axum-extra-with-rejection",
  "macros",
  "serde_qs",
] }
schemars = { workspace = true }

# web server
axum = { workspace = true, features = [
  "http1",
  "json",
  "tokio",
  "query",
  "matched-path",
  "original-uri",
] }
axum-extra = { workspace = true, features = ["typed-header", "with-rejection"] }
chrono = { workspace = true }
http = { workspace = true }
indexmap = { workspace = true }
mime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true, features = ["axum"] }
regex = { workspace = true }
# v4 - Version 4 UUIDs with random data.
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = [
  "cors",
  "fs",
  "normalize-path",
  "timeout",
  "trace",
] }

# logging
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
percent-encoding = { workspace = true }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true }

[build-dependencies]
cda-build = { workspace = true }

[features]
default = []
auth = []
dlt-tracing = ["cda-interfaces/dlt-tracing"]

[dev-dependencies]
cda-interfaces = { workspace = true, features = ["test-utils"] }
cda-plugin-security = { workspace = true, features = ["test-utils"] }
mockall = { workspace = true }
